--- a/src/index.css
+++ b/src/index.css
@@ -1,11 +1,46 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans',
-    'Droid Sans', 'Helvetica Neue', sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New', monospace;
+@font-face {
+  font-family: GT-America;
+  font-weight: 100;
+  src: url("./assets/fonts/GT-America-Standard-Ultra-Light.otf") format("opentype");
+}
+
+@font-face {
+  font-family: GT-America;
+  font-weight: 200;
+  src: url("./assets/fonts/GT-America-Standard-Thin.otf") format("opentype");
+}
+
+@font-face {
+  font-family: GT-America;
+  font-weight: 200;
+  src: url("./assets/fonts/GT-America-Standard-Light.otf") format("opentype");
+}
+
+
+@font-face {
+  font-family: GT-America;
+  font-weight: 400;
+  src: url("./assets/fonts/GT-America-Standard-Regular.otf") format("opentype");
+}
+
+@font-face {
+  font-family: GT-America;
+  font-weight: 500;
+  src: url("./assets/fonts/GT-America-Standard-Medium.otf") format("opentype");
+}
+
+@font-face {
+  font-family: GT-America;
+  font-weight: 600;
+  src: url("./assets/fonts/GT-America-Standard-Bold.otf") format("opentype");
+}
+
+@font-face {
+  font-family: GT-America;
+  font-weight: 700;
+  src: url("./assets/fonts/GT-America-Standard-Bold.otf") format("opentype");
 }
