--- a/src/modules/VehiclesGrid/custom.css
+++ b/src/modules/VehiclesGrid/custom.css
@@ -15,6 +15,10 @@
   width: 300px;
   padding: 20px;
   background: #fff;
+  top: 150px;
+  position: fixed;
+  height: calc(100vh - 150px);
+  z-index: 1100;
 }
 
 .ag-filter-toolpanel-search {
@@ -98,4 +102,39 @@
   font-size: 20px;
   background-position-y: -5px;
   background-image: url(../../assets/icons/acute_up.svg);
+}
+
+.ag-header-cell {
+  background: #f5f5f5;
+}
+
+.ag-header-cell-text {
+  font-weight: 400;
+  color: #555354;
+}
+
+.ag-theme-material .ag-ltr .ag-cell {
+  font-weight: 400;
+  font-size: 12px;
+  color: #1b1b1b;
+}
+
+.ag-theme-material .ag-pivot-mode-panel {
+  display: none;
+}
+
+.ag-theme-material .ag-column-select {
+  border: none;
+}
+
+.ag-column-select-header {
+  display: none;
+}
+
+.ag-theme-material .ag-drag-handle {
+  display: none;
+}
+
+.ag-theme-material .ag-column-drop-vertical {
+  display: none;
 }
