--- a/src/modules/VehiclesGrid/custom.css
+++ b/src/modules/VehiclesGrid/custom.css
@@ -73,7 +73,8 @@
   font-size: 14px;
 }
 
-/* Works on Chrome, Edge, and Safari */
+/* Commenting this, as it is causing issues on all the pages */
+/* Works on Chrome, Edge, and Safari
 *::-webkit-scrollbar {
   width: 4px;
   height: 4px;
@@ -82,7 +83,7 @@
 *::-webkit-scrollbar-thumb {
   background-color: #c5c5c5;
   border-radius: 20px;
-}
+} */
 
 .ag-theme-material .ag-icon-tree-closed::before {
   color: transparent;
